////////////////////////////////////////////////////////////////////////////////
//通用消息

/*
   命令ID: 0x0101
   命令描述: 上线请求(ONLINE)
   协议格式: */
message mesg_online
{
    required uint64 sid = 1;        // M|会话ID|数字|
    required string token = 2;      // M|鉴权TOKEN|字串|
    required string app = 3;        // M|APP名|字串|
    required string version = 4;    // M|APP版本|字串|
}

/*
   命令ID: 0x0102
   命令描述: 上线请求应答(ONLINE-ACK)
   协议格式: */
message mesg_online_ack
{
    required uint64 sid = 1;        // M|会话ID|数字|
    required string app = 2;        // M|APP名|字串|
    required string version = 3;    // M|APP版本|字串|
    required uint32 code = 4;       // M|错误码|数字|
    required string errmsg = 5;     // M|错误描述|字串|
}

/*
   命令ID: 0x0103
   命令描述: 下线请求(OFFLINE)
   协议格式: NONE */

/*
   命令ID: 0x0104
   命令描述: 下线请求应答(OFFLINE-ACK)
   协议格式: NONE */

/*
   命令ID: 0x0105
   命令描述: 客户端心跳(PING)
   协议格式: NONE */

/*
   命令ID: 0x0106
   命令描述: 客户端心跳应答(PONG)
   协议格式: NONE */

/*
   命令ID: 0x0107
   命令描述: 踢连接下线(KICK)
   协议格式: */
message mesg_kick
{
    required uint32 code = 1;       // M|错误码|数字|
    required string errmsg = 2;     // M|错误描述|字串|
}

/*
   命令ID: 0x0108
   命令描述: 踢连接下线应答(KICK-ACK)
   协议格式: NONE */

////////////////////////////////////////////////////////////////////////////////
//上报消息

/* 插件信息 */
message browser_plugin_info {
    optional string name = 1; // 插件名称
    optional string desc = 2; // 插件描述
}

/* 用户代理信息 */
message browser_useragent_info {
    optional string ua = 1; // 用户代理
}

/* 屏幕信息 */
message browser_screen_info {
    optional uint32 width = 1; // screen.width
    optional uint32 height = 2; // screen.height
    optional uint32 avail_width = 3; // screen.availWidth
    optional uint32 avail_height = 4; // screen.availHeight
    optional uint32 avail_left = 5; // screen.availLeft
    optional uint32 avail_top = 6; // screen.availTop
    optional uint32 outer_width = 7; // screen.outerWidth
    optional uint32 outer_height = 8; // screen.outerHeight
    optional uint32 inner_width = 9; // screen.innerWidth
    optional uint32 inner_height = 10; // screen.innerHeight
}

/*
   命令ID: 0x0201
   命令描述: 上报浏览器环境信息(BROWSER-ENV)
   协议格式: */
message mesg_browser_env
{
    required uint64 orig = 1;       // M|发送方UID
    required uint64 dest = 2;       // M|接收方UID
    required uint32 level = 3;      // M|消息级别
    required uint64 time = 4;       // M|发送时间
    required string text = 5;       // M|聊天内容
    optional bytes data = 6;        // M|透传数据
}

/*
   命令ID: 0x0202
   命令描述: 上报浏览器环境信息应答(BROWSER-ENV-ACK)
   协议格式: */
message mesg_browser_env_ack
{
    required uint32 code = 1;       // M|错误码|数字|
    required string errmsg = 2;     // M|错误描述|字串|
}

/* 控件定义 */
enum ctrl_type {
    CTRL_USR_NAME_INPUT_BOX = 0; // 用户名输入框
    CTRL_PASSWD_INPUT_BOX = 1; // 密码输入框
    CTRL_IMG_CODE_INPUT_BOX = 2; // 图形验证码输入框
    CTRL_IMG_CODE_BTN = 3; // 图形验证码刷新按钮
    CTRL_TEL_INPUT_BOX = 4; // 手机号码输入框
    CTRL_SMS_INPUT_BOX = 5; // 手机验证码输入框
    CTRL_SMS_BTN = 6; // 手机验证码获取按钮
    CTRL_LOGIN_BTN = 7; // 登录按钮
}

/* 事件定义 */
enum event_type {
    EV_CHANGE = 0; // change事件
    EV_CLICK = 1; // 单击事件
    EV_DBLCLICK = 2; // 双击事件
    EV_FOCUS = 3; // 获取焦点
    EV_KEYDOWN = 4; // 按键（下）
    EV_KEYPRESS = 5; // 按键
    EV_KEYUP = 6; // 按键（上)
    EV_MOUSEDOWN = 7; // 鼠标（下）
    EV_MOUSEMOVE = 8; // 鼠标移动
    EV_MOUSEOUT = 9; // 鼠标移出
    EV_MOUSEOVER = 10; // 鼠标在某控件上
    EV_MOUSEUP = 11; // 鼠标（上）
    EV_TOUCHSTART = 12; // 触屏开始
    EV_TOUCHMOVE = 13; // 触屏移动
    EV_TOUCHEND = 14; // 触屏结束
    EV_TOUCHCANCEL = 15; // 触屏取消
}

/*
   命令ID: 0x0203
   命令描述: 上报事件统计信息(EVENT-STATISTIC)
   协议格式: */
message mesg_event_statistic
{
   required uint64 orig = 1;       // M|源用户ID|数字|
   required uint64 dest = 2;       // M|目标用户ID|数字|
   required string mark = 3;       // M|备注信息|字串|
}

/*
   命令ID: 0x0204
   命令描述: 上报事件统计信息应答(EVENT-STATISTIC-ACK)
   协议格式: NONE */
message mesg_event_statistic_ack
{
    required uint32 code = 1;       // M|错误码|数字|
    required string errmsg = 2;     // M|错误描述|字串|
}

////////////////////////////////////////////////////////////////////////////////
//系统内部命令

/*
   命令ID: 0x0301
   命令描述: 帧听层信息上报(LSND-INFO)
   协议格式: */
message mesg_lsnd_info
{
    required uint32 type = 1;       // M|类型(0:UNKNOWN 1:TCP 2:WS)|数字|
    required uint32 nid = 2;        // M|结点ID|数字|
    required uint32 opid = 3;       // M|运营商ID|数字|
    required string nation = 4;     // M|所属国家|字串|
    required string ip = 5;         // M|IP地址|字串|
    required uint32 port = 6;       // M|端口号|数字|
    required uint32 connections = 7;   // M|在线连接数|数字|
}

/*
   命令ID: 0x0302
   命令描述: 帧听层上报应答(LSND-INFO-ACK)
   协议格式: NONE */

/*
   命令ID: 0x0303
   命令描述: 转发层信息上报 (FRWD-INFO)
   协议格式: */
message mesg_frwd_info
{
    required uint32 nid = 1;        // M|结点ID|数字|
    required string ip = 2;     // M|IP地址|字串|
    required uint32 forward_port = 3;    // M|前端口号|数字|
    required uint32 backend_port = 4;    // M|后端口号|数字|
}

/*
   命令ID: 0x0304
   命令描述: 转发层信息应答(FRWD-INFO-ACK)
   协议格式: NONE */
